--- a/idex.html
+++ b/idex.html
@@ -9,12 +9,34 @@
 <body>
     
 
+    <section id="calculator">
+
+        <div class="boxes">
+            <input class="numOne" type="text">
+            <input class="numTwo" type="text">
+            <input class="answer" type="text">
+         </div>
+        </section>
+         <div class="myButtons">
+            <button class="buttonOne">+</button>
+            <button class="buttonTwo">-</button>
+            <button class="buttonThree">X</button>
+            <button class="buttonFour">/</button>
+        </div>
+
+
+
+
+
+   
+
 
 
  <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
+
     <script src="main.js"></script>
     
 </body>
