--- a/idex.html
+++ b/idex.html
@@ -35,7 +35,7 @@
             <table>
                 <tr>
                     <td colspan="4">
-            <input  id="result" type="text" value="" >
+            <input  id="result" type="text" value="YOURWAY" >
                     </td>
                 </tr>
 
