--- a/idex.html
+++ b/idex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>CALCULATOR</title>
 </head>
 <body>
     
@@ -92,7 +92,7 @@
 
 
             <!-- FOUND AN ALTERNATIVE WAY TO WRITE A CODE FOR JQUERY CALCULATOR.
-            YOU PROBALY WON'T APPROVE OF ME CODING IT LIKE THIS BUT IT'S THE ONLY I WAS ABLE TO GET THE CALCULATOR TO FUNCTION.
+            YOU PROBABLY WON'T APPROVE OF ME CODING IT LIKE THIS BUT, IT'S THE ONLY WAY I WAS ABLE TO GET THE CALCULATOR TO FUNCTION.
         
             PLEASE EXCUSE THE UNNECESSARY CLASS SELECTORS-->
 
